--- a/src/assets/styles/components/ui/UserMenu.scss
+++ b/src/assets/styles/components/ui/UserMenu.scss
@@ -12,7 +12,7 @@
   left: 0;
   bottom: -877px;
   border-radius: 4px;
-  z-index: 1;
+  z-index: 2;
   &__options {
     margin-top: 150px;
     @include display-flex(center, center, column);
